# fieldtest

./: .gitignore  CLAUDESKILL  LICENSE  README.md  pyproject.toml
.claude/commands/: optimize.md
.github/workflows/: publish.yml
docs/: CNAME  index.html  philosophy.md
docs/recipes/: README.md  adding-evals.md  adversarial-fixtures.md  agent-outputs.md  before-after-prompt.md  ci-integration.md  model-comparison.md  rag-faithfulness.md  smoke-subsets.md
examples/: eval-patterns.md  generate-patterns.md  generate_anthropic.py  generate_openai.py  generate_subprocess.py  runner-patterns.md  runner_anthropic.py  runner_openai.py  runner_subprocess.py
fieldtest/: __init__.py  cli.py  config.py  errors.py  init_template.py  runner.py
fieldtest/demo/email/: README.md  config.yaml  rules.py
fieldtest/demo/email/results/: demo-offline-data.json  demo-offline-report.html  demo-offline-report.md
fieldtest/demo/extraction/: README.md  config.yaml  rules.py
fieldtest/demo/extraction/results/: demo-offline-data.json  demo-offline-report.html  demo-offline-report.md
fieldtest/demo/rag/: README.md  config.yaml  rules.py
fieldtest/demo/rag/results/: demo-offline-data.json  demo-offline-report.html  demo-offline-report.md
fieldtest/judges/: __init__.py  dispatch.py  llm.py  reference.py  regex_.py  registry.py
fieldtest/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
fieldtest/results/: __init__.py  aggregator.py  html.py  report.py  writer.py
fieldtest/templates/: __init__.py  chatbot.yaml  email.yaml  rag.yaml
tests/: test_aggregator.py  test_cli.py  test_config.py  test_judges.py  test_providers.py
tests/evals/: .gitignore  config.yaml  rules.py  runner.py
tests/evals/fixtures/: score_basic.yaml  score_with_judge_errors.yaml
tests/evals/outputs/score_basic/: run-1.txt  run-2.txt  run-3.txt
(+57 files in other folders)
